<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_gravity="center_vertical"
        android:text="@string/addKeyValueAddValueTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:hint="@string/addKeyValueAddValueTitleDialogHint"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="8dp"
        android:id="@+id/itemAddKeyValueItemTitle"
        android:layout_gravity="center_vertical"
        android:text="@string/addKeyValueAddValueHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="#999999"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>