<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/randomGenerateContent"
        android:layout_gravity="center"
        app:autoSizeTextType="uniform"
        android:lines="1"
        android:gravity="center"
        android:text="@string/randomGenerateDefaultGenerate"
        android:textSize="26sp"
        android:layout_width="300dp"
        android:layout_height="150dp" />


    <SeekBar
        android:id="@+id/randomGenerateSeekBar"
        android:max="15"
        android:progress="3"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/randomGenerateGenerateButton"
        android:text="@string/randomGenerateGenerate"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/randomGenerateConfirmButton"
        android:text="@string/confirm"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>